           search parameters are saved as metadata in the virtual fs
           and displayed in panel's statusbar
    ADDED: filter option: Apply filter to directories
    ADDED: action: view > Apply settings to other tabs
    ADDED: action: view > Save settings as default (for new instances of this view type)
    ADDED: option: Panel > View > Locale aware sorting

    CHANGED: url commandline arguemnt: if there is already a tab open with that url,
             it is activated, otherwis a new tab is opened in the active panel

    FIXED: [ 3073211 ] Wrong quoting when opening file in external editor
    FIXED: [ 3059457 ] new panel uses default columns instead of configured ones
    FIXED: [ 2898151 ] also in view-mode (F3) possible to edit, thanks to Kevin Kofler
    FIXED: panelpopup viewer: error messageboxes when file cannot be displayed
    FIXED: [ 2981303 ] Viewer/editor unused submenu Game, thanks to Kevin Kofler
    FIXED: regression making single-click mode unusable, thanks to Kevin Kofler
    FIXED: [ 3003338 ] Rename selects extension regression, thanks to Kevin Kofler
    FIXED: [ 2980201 ] KrViewer doesn't handle binary files well (this fix works only for local files !)
    FIXED: "sort by" useractions change sorting direction randomly
    FIXED: [ 3028599 ] Sorting criteria is not saved at exit
    FIXED: [ 2949337 ] splitter ui bug
    FIXED: [ 2843749 ] view item is deselected when updated
    FIXED: brief view: mouse wheel doesn't work
    FIXED: brief view: mouse selection doesn't work in columns > columns per page
    FIXED: selecting a bigger number of files is very slow
    FIXED: [ 2969403 ] KrViewer shows old file content if file is overwritten, thanks to Kevin Kofler
    FIXED: [ 246424 (bugs.kde.org) ] krusader tries to load WHOLE big file into memory on F3
    FIXED: [ 2154760 ] Krusader erases files when opening for editing
    FIXED: changing sort direction is slow
    FIXED: [ 3015094 ] krusader doesn't exit at closing the application