@@ -85,7 +85,7 @@ private:
 #define INTERBRIEFVIEW_ID 1
 KrViewInstance interBriefView(INTERBRIEFVIEW_ID, "KrInterBriefView", i18n("&Brief View"), "view-list-icons",
                               Qt::ALT + Qt::SHIFT + Qt::Key_B,
-                              KrInterBriefView::create, KrInterViewItem::itemHeightChanged);
+                              KrInterBriefView::create);
 // end of register code
 
 KrInterBriefView::KrInterBriefView(QWidget *parent, const bool &left, KConfig *cfg, KrMainWindow *mainWindow):
