@@ -8,6 +8,7 @@
     ADDED: action: view > Save settings as default (for new instances of this view type)
     ADDED: option: Panel > View > Locale aware sorting
 
+    CHANGED: Konfigurator: "apply" takes effect immediately.
     CHANGED: url commandline arguemnt: if there is already a tab open with that url,
              it is activated, otherwis a new tab is opened in the active panel
 
